--- a/style/other.css
+++ b/style/other.css
@@ -213,7 +213,7 @@ h1.title {
 
 .tile .tile-inner {
   border-radius: 3px;
-  background: #eee4da;
+  background: #fefefe;
   text-align: center;
   font-weight: bold;
   z-index: 10;
@@ -221,7 +221,7 @@ h1.title {
 
 .tile .tile-inner {
   border-radius: 3px;
-  background: #eee4da;
+  background: #fefefe;
   text-align: center;
   font-weight: bold;
   z-index: 10;
@@ -231,7 +231,7 @@ h1.title {
 .tile.tile-2 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #00c8ff url("../images/堀川雷鼓.jpg");
+  background: #fefefe url("../images/715雾雨魔理沙.png");
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -248,7 +248,7 @@ h1.title {
 .tile.tile-4 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #00b4ff url("../images/雾雨魔理沙.jpg");
+  background: #fefefe url("../images/911魂魄妖梦.png");
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -265,7 +265,7 @@ h1.title {
 .tile.tile-8 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #00a0ff url("../images/稀神探女.jpg"); 
+  background: #fefefe url("../images/711星熊勇仪.png"); 
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -281,7 +281,7 @@ h1.title {
 .tile.tile-16 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #008cff url("../images/埴安神袿姬.jpg"); 
+  background: #fefefe url("../images/516饕餮尤魔.png"); 
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -297,7 +297,7 @@ h1.title {
 .tile.tile-32 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #0078ff url("../images/高丽野阿吽.jpg"); 
+  background: #fefefe url("../images/701庭渡久侘歌.png"); 
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -313,7 +313,7 @@ h1.title {
 .tile.tile-64 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #0064ff url("../images/十六夜咲夜.jpg"); 
+  background: #fefefe url("../images/716铃仙·U·因幡.png"); 
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -329,7 +329,7 @@ h1.title {
 .tile.tile-128 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #ffb400 url("../images/铃仙&因幡帝.jpg");
+  background: #fefefe url("../images/620鬼人正邪.png");
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -345,7 +345,7 @@ h1.title {
 .tile.tile-256 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #ff9c00 url("../images/射命丸文.jpg");
+  background: #fefefe url("../images/404八坂神奈子.png");
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -361,7 +361,7 @@ h1.title {
 .tile.tile-512 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #ff8400 url("../images/东风谷早苗.jpg");
+  background: #fefefe url("../images/702饭纲丸龙.png");
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -376,7 +376,7 @@ h1.title {
 .tile.tile-1024 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #ff6c00 url("../images/妖梦&幽幽子.jpg");
+  background: #fefefe url("../images/602天弓千亦.png");
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -392,7 +392,7 @@ h1.title {
 .tile.tile-2048 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #ff5400 url("../images/博丽灵梦.jpg");
+  background: #fefefe url("../images/505少名针妙丸.png");
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -408,7 +408,7 @@ h1.title {
 .tile.tile-4096 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #ff3c00 url("../images/庭渡久侘歌.jpg");
+  background: #fefefe url("../images/504比那名居天子.png");
   background-size: cover;
   line-height: 183px;
   text-align: right;
@@ -420,7 +420,39 @@ h1.title {
     line-height: 100px;
   } 
 }
-  
+
+.tile.tile-8192 .tile-inner {
+  color: #17130f;
+  font-size: 28px; 
+  background: #fefefe url("../images/1005河城荷取.png");
+  background-size: cover;
+  line-height: 183px;
+  text-align: right;
+  box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+  }
+  @media screen and (max-width: 520px) {
+   .tile.tile-8192 .tile-inner {
+    font-size: 15px; 
+    line-height: 100px;
+  } 
+}
+
+.tile.tile-16384 .tile-inner {
+  color: #17130f;
+  font-size: 28px; 
+  background: #fefefe url("../images/523豪德寺三花.png");
+  background-size: cover;
+  line-height: 183px;
+  text-align: right;
+  box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+  }
+  @media screen and (max-width: 520px) {
+   .tile.tile-16384 .tile-inner {
+    font-size: 15px; 
+    line-height: 100px;
+  } 
+}
+
 .tile.tile-super .tile-inner {
   color: #f9f6f2;
   background: #3c3a32;
