--- a/style/other.css
+++ b/style/other.css
@@ -3,9 +3,43 @@ html, body {
   padding: 0;
   background: #faf8ef;
   color: #776e65;
-  font-family: "Clear Sans", "Helvetica Neue", "Microsoft Yahei",  Arial, sans-serif;
-  font-size: 18px; 
+  font-family: "HarmonyOS", "Clear Sans", "Helvetica Neue", "Microsoft Yahei",  Arial, sans-serif;
+  font-size: 20px; 
 }
+
+.Diffculty span{
+	font-family: "Revue", "Clear Sans", "Helvetica Neue", "Microsoft Yahei",  Arial, sans-serif;
+	font-size: 24px;
+	color: #fefefe;
+}
+
+.Easy_Mode{
+	text-shadow: 0px 0px 7px #42a158;
+}
+
+.Normal_Mode{
+	text-shadow: 0px 0px 7px #0054b2;
+}
+
+.Hard_Mode{
+	text-shadow: 0px 0px 7px #0009c5;
+}
+
+.Lunatic_Mode{
+	text-shadow: 0px 0px 7px #9700a0;
+}
+
+.OverDrive_Mode{
+	text-shadow: 0px 0px 7px #bd0000;
+}
+
+.THName{
+	font-family: "NewCinemaB", "HarmonyOS", "Clear Sans", "Helvetica Neue", "Microsoft Yahei",  Arial, sans-serif;
+}
+
+.current-status, .game-explanation {
+  margin-top: 2px !important;
+  }
 
 .game-container .game-message a {
   display: inline-block;
@@ -226,231 +260,6 @@ h1.title {
   font-weight: bold;
   z-index: 10;
   font-size: 55px; 
-}
-
-.tile.tile-2 .tile-inner {
-  color: #17130f;
-  font-size: 28px;
-  background: #fefefe url("../images/715雾雨魔理沙.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
-}
-
-@media screen and (max-width: 520px) {
-  .tile.tile-2 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
-}
-
-.tile.tile-4 .tile-inner {
-  color: #17130f;
-  font-size: 28px;
-  background: #fefefe url("../images/911魂魄妖梦.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
-}
-
-@media screen and (max-width: 520px) {
-  .tile.tile-4 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
-}
-
-.tile.tile-8 .tile-inner {
-  color: #17130f;
-  font-size: 28px;
-  background: #fefefe url("../images/711星熊勇仪.png"); 
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-}
-
-@media screen and (max-width: 520px) {
-  .tile.tile-8 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
-}
-
-.tile.tile-16 .tile-inner {
-  color: #17130f;
-  font-size: 28px;
-  background: #fefefe url("../images/516饕餮尤魔.png"); 
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-}
-
-@media screen and (max-width: 520px) {
-  .tile.tile-16 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
-}
-
-.tile.tile-32 .tile-inner {
-  color: #17130f;
-  font-size: 28px;
-  background: #fefefe url("../images/701庭渡久侘歌.png"); 
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-}
-
-@media screen and (max-width: 520px) {
-  .tile.tile-32 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
-}
-
-.tile.tile-64 .tile-inner {
-  color: #17130f;
-  font-size: 28px;
-  background: #fefefe url("../images/716铃仙·U·因幡.png"); 
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-}
-
-@media screen and (max-width: 520px) {
-  .tile.tile-64 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
-}
-
-.tile.tile-128 .tile-inner {
-  color: #17130f;
-  font-size: 28px;
-  background: #fefefe url("../images/620鬼人正邪.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(255, 200, 0, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
-}
-  @media screen and (max-width: 520px) {
-    .tile.tile-128 .tile-inner {
-      font-size: 15px; 
-      line-height: 100px;
-    } 
-  }
-
-.tile.tile-256 .tile-inner {
-  color: #17130f;
-  font-size: 28px; 
-  background: #fefefe url("../images/404八坂神奈子.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(255, 176, 0, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
-}
-  @media screen and (max-width: 520px) {
-    .tile.tile-256 .tile-inner {
-      font-size: 15px; 
-      line-height: 100px;
-    } 
-  }
-
-.tile.tile-512 .tile-inner {
-  color: #17130f;
-  font-size: 28px; 
-  background: #fefefe url("../images/702饭纲丸龙.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(255, 152, 0, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
-}
-  @media screen and (max-width: 520px) {
-    .tile.tile-512 .tile-inner {
-      font-size: 15px; 
-      line-height: 100px;
-    } 
-  }
-.tile.tile-1024 .tile-inner {
-  color: #17130f;
-  font-size: 28px; 
-  background: #fefefe url("../images/602天弓千亦.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(255, 128, 0, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
-}
-  @media screen and (max-width: 520px) {
-    .tile.tile-1024 .tile-inner {
-      font-size: 15px; 
-      line-height: 100px;
-    } 
-  }
-
-.tile.tile-2048 .tile-inner {
-  color: #17130f;
-  font-size: 28px; 
-  background: #fefefe url("../images/505少名针妙丸.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(255, 104, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-}
-  @media screen and (max-width: 520px) {
-    .tile.tile-2048 .tile-inner {
-      font-size: 15px; 
-      line-height: 100px;
-    } 
-  }
-
-.tile.tile-4096 .tile-inner {
-  color: #17130f;
-  font-size: 28px; 
-  background: #fefefe url("../images/504比那名居天子.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-  }
-  @media screen and (max-width: 520px) {
-   .tile.tile-4096 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
-}
-
-.tile.tile-8192 .tile-inner {
-  color: #17130f;
-  font-size: 28px; 
-  background: #fefefe url("../images/1005河城荷取.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-  }
-  @media screen and (max-width: 520px) {
-   .tile.tile-8192 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
-}
-
-.tile.tile-16384 .tile-inner {
-  color: #17130f;
-  font-size: 28px; 
-  background: #fefefe url("../images/523豪德寺三花.png");
-  background-size: cover;
-  line-height: 183px;
-  text-align: right;
-  box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-  }
-  @media screen and (max-width: 520px) {
-   .tile.tile-16384 .tile-inner {
-    font-size: 15px; 
-    line-height: 100px;
-  } 
 }
 
 .tile.tile-super .tile-inner {
