--- a/style/group1.css
+++ b/style/group1.css
@@ -1,8 +1,10 @@
 .tile.tile-2 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #fefefe url("../images/715雾雨魔理沙.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_00.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
@@ -18,8 +20,10 @@
 .tile.tile-4 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #fefefe url("../images/911魂魄妖梦.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_08.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); 
@@ -35,8 +39,10 @@
 .tile.tile-8 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #fefefe url("../images/405山城高岭.png"); 
-  background-size: cover;
+  background: #fefefe url("../images/pg_02.png"); 
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
 }
@@ -51,8 +57,10 @@
 .tile.tile-16 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #fefefe url("../images/711星熊勇仪.png"); 
-  background-size: cover;
+  background: #fefefe url("../images/pg_11.png"); 
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
 }
@@ -67,8 +75,10 @@
 .tile.tile-32 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #fefefe url("../images/516饕餮尤魔.png"); 
-  background-size: cover;
+  background: #fefefe url("../images/pg_01.png"); 
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
 }
@@ -83,8 +93,10 @@
 .tile.tile-64 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #fefefe url("../images/701庭渡久侘歌.png"); 
-  background-size: cover;
+  background: #fefefe url("../images/pg_09.png"); 
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
 }
@@ -99,8 +111,10 @@
 .tile.tile-128 .tile-inner {
   color: #17130f;
   font-size: 28px;
-  background: #fefefe url("../images/620鬼人正邪.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_04.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(255, 200, 0, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
@@ -115,8 +129,10 @@
 .tile.tile-256 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #fefefe url("../images/401犬走椛.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_10.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(255, 176, 0, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
@@ -131,8 +147,10 @@
 .tile.tile-512 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #fefefe url("../images/404八坂神奈子.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_03.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(255, 152, 0, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
@@ -146,8 +164,10 @@
 .tile.tile-1024 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #fefefe url("../images/702饭纲丸龙.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_13.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(255, 128, 0, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
@@ -162,8 +182,10 @@
 .tile.tile-2048 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #fefefe url("../images/602天弓千亦.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_05.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(255, 104, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
@@ -178,8 +200,10 @@
 .tile.tile-4096 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #fefefe url("../images/505少名针妙丸.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_14.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
@@ -194,8 +218,10 @@
 .tile.tile-8192 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #fefefe url("../images/1005河城荷取.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_07.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
@@ -210,14 +236,34 @@
 .tile.tile-16384 .tile-inner {
   color: #17130f;
   font-size: 28px; 
-  background: #fefefe url("../images/523豪德寺三花.png");
-  background-size: cover;
+  background: #fefefe url("../images/pg_12.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   line-height: 183px;
   text-align: right;
   box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
   }
   @media screen and (max-width: 520px) {
    .tile.tile-16384 .tile-inner {
+    font-size: 15px; 
+    line-height: 100px;
+  } 
+}
+
+.tile.tile-32768 .tile-inner {
+  color: #17130f;
+  font-size: 28px; 
+  background: #fefefe url("../images/pg_06.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  line-height: 183px;
+  text-align: right;
+  box-shadow: 0 0 30px 10px rgba(255, 80, 0, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
+  }
+  @media screen and (max-width: 520px) {
+   .tile.tile-32768 .tile-inner {
     font-size: 15px; 
     line-height: 100px;
   } 
