--- a/style/other.css
+++ b/style/other.css
@@ -283,4 +283,11 @@ h1.title {
         font-size: 15px; 
       } 
     }
-  
+    .tile.tile-super .tile-inner {
+      color: #f9f6f2;
+      background: #3c3a32;
+      font-size: 28px; }
+      @media screen and (max-width: 520px) {
+        .tile.tile-super .tile-inner {
+          font-size: 15px; } 
+        }
